--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     },
     "dependencies": {
         "@harv46/vue-table": "^0.0.6",
+        "sweetalert": "^2.1.2",
+        "vue-sweetalert2": "^5.0.5",
         "vue-toastification": "^2.0.0-rc.5"
     }
 }
